// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<header
  className="sc-chPdSV ezSWnC"
>
  <div
    className="sc-kgoBCf gieNXv"
  >
    title
  </div>
</header>
`;

exports[`Section should render content 1`] = `
<header
  className="sc-chPdSV ezSWnC"
>
  <div
    className="sc-kgoBCf gieNXv"
  >
    title
  </div>
  content
</header>
`;
